spigot and paper otterlib port