@@ -2,7 +2,6 @@ package one.oth3r.directionhud.utils;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
-import net.md_5.bungee.api.ChatMessageType;
 import one.oth3r.directionhud.DirectionHUD;
 import one.oth3r.directionhud.PacketHelper;
 import one.oth3r.directionhud.common.Assets;
@@ -12,18 +11,16 @@ import one.oth3r.directionhud.common.files.playerdata.PData;
 import one.oth3r.directionhud.common.hud.module.ModuleInstructions;
 import one.oth3r.directionhud.common.utils.*;
 import one.oth3r.directionhud.common.template.PlayerTemplate;
-import org.bukkit.Bukkit;
-import org.bukkit.Color;
-import org.bukkit.Location;
-import org.bukkit.Particle;
+import org.bukkit.*;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockFace;
 import org.bukkit.util.RayTraceResult;
 
 import java.util.Objects;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
 
-public class Player extends PlayerTemplate {
+public class DPlayer extends PlayerTemplate {
     private org.bukkit.entity.Player player;
     @Override
     public boolean equals(Object obj) {
@@ -33,7 +30,7 @@ public class Player extends PlayerTemplate {
         if (obj == null || getClass() != obj.getClass()) {
             return false;
         }
-        Player other = (Player) obj;
+        DPlayer other = (DPlayer) obj;
         return Objects.equals(player, other.player);
     }
     @Override
@@ -41,13 +38,13 @@ public class Player extends PlayerTemplate {
         return Objects.hash(player);
     }
 
-    public Player() {}
+    public DPlayer() {}
 
-    public Player(org.bukkit.entity.Player bukkitPlayer) {
+    public DPlayer(org.bukkit.entity.Player bukkitPlayer) {
         player = bukkitPlayer;
     }
 
-    public Player(String identifier) {
+    public DPlayer(String identifier) {
         if (identifier.contains("-")) player = Bukkit.getPlayer(UUID.fromString(identifier));
         else player = Bukkit.getPlayer(identifier);
     }
@@ -64,12 +61,12 @@ public class Player extends PlayerTemplate {
 
     @Override
     public void sendMessage(CTxT message) {
-        player.spigot().sendMessage(message.b());
+        player.sendMessage(message.b());
     }
 
     @Override
     public void sendActionBar(CTxT message) {
-        player.spigot().sendMessage(ChatMessageType.ACTION_BAR, message.b());
+        player.sendActionBar(message.b());
     }
 
     @Override
@@ -118,10 +115,23 @@ public class Player extends PlayerTemplate {
 
     @Override
     public String getSpawnDimension() {
-        if (player.getRespawnLocation() != null && player.getRespawnLocation().getWorld() != null) {
-            return Utl.dim.format(player.getRespawnLocation().getWorld());
-        }
-        return Utl.dim.format(Bukkit.getWorlds().get(0));
+        return "";
+    }
+
+    public CompletableFuture<String> getRespawnLocationAsync() {
+        CompletableFuture<String> future = new CompletableFuture<>();
+
+        Bukkit.getGlobalRegionScheduler().run(DirectionHUD.getData().getPlugin(), task -> {
+            // Perform logic on the global thread
+            Location location = player.getRespawnLocation();
+            World world;
+            if (location == null) world = Bukkit.getWorlds().getFirst();
+            else world = location.getWorld();
+
+            future.complete(Utl.dim.format(world));
+        });
+
+        return future;
     }
 
     @Override
@@ -136,8 +146,8 @@ public class Player extends PlayerTemplate {
 
     @Override
     public long getWorldTime() {
-        // this is also not correct, but will fix later todo
-        return player.getWorld().getTime();
+        // this is the player time, fix when there is an issue todo
+        return player.getPlayerTime();
     }
 
     @Override
@@ -210,7 +220,7 @@ public class Player extends PlayerTemplate {
 
     @Override
     public Loc getLoc() {
-        if (isValid()) return new Loc(new Player(player));
+        if (isValid()) return new Loc(new DPlayer(player));
         else return new Loc();
     }
 
